--- a/public/templates/film-detail.html
+++ b/public/templates/film-detail.html
@@ -20,7 +20,9 @@
 			<div class="col-md-4">
 				<div class="post-wrap" ng-if="checkUserLoggedIn()">
 					<form method="post" ng-submit="postComment(filmData.id, user.id)">
+						
 						<div class="form-group">
+							<label><i class="glyphicon glyphicon-user"></i> {{ user.name }}</label>
 							<textarea  name="comment" ng-model="commentw.comment" class="form-control" placeholder="Write Comment"></textarea>
 						</div>
 						<div class="form-group">
@@ -35,12 +37,14 @@
 			</div>
 
 		</div>
-		<div class="col-md-4">
-			<div class="alert alert-danger" ng-if="error">
-				<h4>{{ error[0] }}</h4>
-			</div>
-			<div class="alert alert-success" ng-if="success">
-				<h4>{{ success }}</h4>
+		<div class="row film-comment" >
+			<div class="col-md-4">
+				<div class="alert alert-danger" ng-if="error">
+					<h4>{{ error[0] }}</h4>
+				</div>
+				<div class="alert alert-success" ng-if="success">
+					<h4>{{ success }}</h4>
+				</div>
 			</div>
 		</div>
 		<div class="row film-comments-wrap" >
