Add comments in code in many files

--- a/public/templates/film-detail.html
+++ b/public/templates/film-detail.html
@@ -1,3 +1,5 @@
+
+<!-- Film detail page -->
 <div class="film-detail-wrap" ng-init="filmDetail()" >
 	<div class="film-detail-sub" ng-if="filmData">
 		<div class="row "  >
