--- a/public/templates/films.html
+++ b/public/templates/films.html
@@ -1,5 +1,5 @@
 	
-
+	<!-- Films page -->
 	<div class="row films-wrap" ng-init="fetchFilms()">
 		<div class="col-md-12">
 			<table class="table table-striped">
