--- a/public/templates/films-create.html
+++ b/public/templates/films-create.html
@@ -1,4 +1,5 @@
 
+<!-- Film create page -->
 <div class="row film-form-wrap" ng-init="getCounties();getGenres()">
 	<div class="col-md-6 col-md-offset-3">
 		<h2>Create Film</h2>
